ex03: still wip

--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: lrocca <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/25 19:00:20 by lrocca            #+#    #+#              #
-#    Updated: 2021/11/26 21:15:33 by lrocca           ###   ########.fr        #
+#    Updated: 2021/11/27 19:17:14 by lrocca           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ CXX			=	clang++
 CXXFLAGS	=	-Wall -Wextra -Werror -std=c++98
 
 NAME	=	game
-FILES	=	main.cpp AMateria.cpp Cure.cpp Ice.cpp ICharacter.cpp
+FILES	=	main.cpp AMateria.cpp Character.cpp Cure.cpp Ice.cpp MateriaSource.cpp
 TEST	=	my.txt
 
 OBJ		=	$(FILES:.cpp=.o)
